Создать мелкие компоненты на флексах

--- a/catalog.html
+++ b/catalog.html
@@ -138,8 +138,9 @@
           </section>
         </div>
         <section class="catalog-sedona">
+          <div class="catalog-sedona-sedona">
           <p class="found-hostels">Найдено гостиниц: 38</p>
-          <details>
+          <details class="catalog-sorting">
             <summary>Сортировка</summary>
             <a class="dropdown-item" href="#">Сначала дешёвые</a>
             <a class="dropdown-item" href="#">Сначала популярное</a>
@@ -154,6 +155,7 @@
           <a href="#" class="button button-light">
             <span class="visually-hidden">Показать список</span>
           </a>
+          </div>
           <div class="catalog">
             <ul class="hotels-list">
               <li class="hotels-card-1">
@@ -206,6 +208,7 @@
               </li>
             </ul>
           </div>
+          <div class="pagination-container">
           <ul class="pagination">
             <li class="pagination-item">
               <span class="pagination-link pagination-current">1</span>
@@ -226,6 +229,7 @@
               <a class="pagination-link" href="#">10</a>
             </li>
           </ul>
+
           <p class="hostels-total">Гостиниц на странице:</p>
           <details>
             <summary class="button-dropdown">Сортировка</summary>
@@ -233,6 +237,7 @@
             <a class="dropdown-item" href="#">5</a>
             <a class="dropdown-item" href="#">6</a>
           </details>
+          </div>
         </section>
         <section class="newsletter-catalog">
           <h2 class="page-footer-title">Подпишитесь на рассылку</h2>
@@ -241,7 +246,7 @@
             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
               required>
             <button class="button-newsletter-button" type="submit">
-              <span class="visually-hidden">Подписаться</span>
+              <span class="subscrube">Подписаться</span>
             </button>
           </form>
         </section>
