--- a/index.html
+++ b/index.html
@@ -41,11 +41,9 @@
       </nav>
     </header>
     <main class="main-container main-index">
-      <div class="page-container">
         <div class="welcome-logo">
-          <img class="logo-sedona" src="images/index/welcome.svg" width="458" height="352" alt="Логотип седона">
+          <img class="logo-sedona" src="images/index/welcome.svg" width="458" height="352" alt="welcome SEDONA">
         </div>
-        alt="Добро пожаловать в Седону">
         <p class="visually-hidden">WELCOME</p>
         <p class="visually-hidden">to the gorgeous</p>
         <h1 class="visually-hidden">SEDONA</h1>
@@ -57,7 +55,7 @@
           <ol class="facts">
             <li class="facts-item facts-item-wide">
               <div class="facts-item-sedona-sedona">
-                <h3 class="facts-item-sedona">Настоящий городок</h3>
+                <h3 class="facts-item-sedona-item">Настоящий городок</h3>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
                 <img class="photo" src="images/index/city.jpg" width="800" height="384" alt="Настоящий городок">
@@ -79,7 +77,7 @@
             </li>
             <li class="facts-item facts-item-wide">
               <div class="most">
-                <h3 class="facts-item-sedona">Там есть мост дьявола</h3>
+                <h3 class="facts-item-sedona-item">Там есть мост дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
               <img class="photo" src="images/index/devils-bridge.jpg" width="800" height="384" alt="Мост дьвола">
@@ -112,14 +110,13 @@
             <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email"
               required>
             <button class="button-newsletter-button" type="submit">
-              <span class="visually-hidden">Подписаться</span>
+              <span class="subscrube">Подписаться</span>
             </button>
           </form>
         </section>
-      </div>
     </main>
     <footer class="page-footer">
-      <div class="page-footer-container">
+
         <section class="footer-social">
           <h2 class="visually-hidden">Социальные сети</h2>
           <ul class="footer-spcial-list">
@@ -150,7 +147,7 @@
               alt="Логотип html academy».">
           </a>
         </section>
-      </div>
+
     </footer>
   </div>
 </body>
