--- a/catalog.html
+++ b/catalog.html
@@ -105,9 +105,9 @@
                       </label>
                     </li>
                   </ul>
-            </fieldset>
-          </form>
-          </div>
+                </fieldset>
+              </form>
+            </div>
             <fieldset class="catalog-filter-group">
               <legend class="catalog-filter-title">Стоимость, ₽:</legend>
               <div class="j-filter-content filter__content ">
@@ -135,10 +135,8 @@
               <button class="button-apply" type="submit">Применить</button>
               <button class="button-sbros" type="reset">Сбросить</button>
             </div>
-          </div>
-          </section>
-
-
+        </div>
+        </section>
         <section class="catalog-sedona">
           <div class="catalog-sedona-sedona">
             <p class="found-hostels">Найдено гостиниц: 38</p>
@@ -166,8 +164,10 @@
                     alt="Amara Resort & Spa">
                   <h3 class="hotels-card-title">Amara Resort & Spa</h3>
                 </a>
-                <p class="hostels-card-type">Гостиница</p>
-                <p class="product-card-price">От 4000 ₽</p>
+                <div class="hotels-hotels">
+                 <p class="hostels-card-type">Гостиница</p>
+                 <p class="product-card-price">От 4000 ₽</p>
+                </div>
                 <a class="product-card-button" href="#">Подробнее</a>
                 <a class="product-card-button-favorites" href="#">В избранное</a>
                 <p class="product-card-button-rating">Рейтинг: 8,5</p>
@@ -178,11 +178,14 @@
                     alt="Villas at Poco Diablo">
                   <h3 class="hotels-card-title">Villas at Poco Diablo</h3>
                 </a>
-                <p class="hostels-card-type">Гостиница</p>
-                <p class="product-card-price">От 5000 ₽</p>
+                <div class="hotels-hotels">
+                  <p class="hostels-card-type">Гостиница</p>
+                  <p class="product-card-price">От 5000 ₽</p>
+                </div>
                 <a class="product-card-button" href="#">Подробнее</a>
                 <a class="product-card-favorites" href="#">В избранном</a>
                 <p class="product-card-button-rating">Рейтинг: 9,2</p>
+
               </li>
               <li class="hotels-card-3">
                 <a class="hotels-card-link" href="#">
@@ -190,8 +193,10 @@
                     alt="Desert Quail Inn">
                   <h3 class="hotels-card-title">Desert Quail Inn</h3>
                 </a>
+                <div class="hotels-hotels">
                 <p class="hostels-card-type">Гостиница</p>
                 <p class="product-card-price">От 2500 ₽</p>
+              </div>
                 <a class="product-card-button" href="#">Подробнее</a>
                 <a class="product-card-button-favorites" href="#">В избранное</a>
                 <p class="product-card-button-rating">Рейтинг: 6,9</p>
@@ -202,8 +207,10 @@
                     alt="GreenTree Inn">
                   <h3 class="hotels-card-title">GreenTree Inn</h3>
                 </a>
+                <div class="hotels-hotels">
                 <p class="hostels-card-type">Гостиница</p>
                 <p class="product-card-price">От 1500 ₽</p>
+              </div>
                 <a class="product-card-button" href="#">Подробнее</a>
                 <a class="product-card-button-favorites" href="#">В избранное</a>
                 <p class="product-card-button-rating">Рейтинг: 5,0</p>
