--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
     <main class="main-container main-index">
         <div class="welcome-logo">
           <img class="logo-sedona" src="images/index/welcome.svg" width="458" height="352" alt="welcome SEDONA">
+          <img class="welcome-block-bottom" src="images/index/Vector.svg" width="1200" height="57" alt="vector">
         </div>
         <p class="visually-hidden">WELCOME</p>
         <p class="visually-hidden">to the gorgeous</p>
@@ -56,6 +57,7 @@
             <li class="facts-item facts-item-wide">
               <div class="facts-item-sedona-sedona">
                 <h3 class="facts-item-sedona-item">Настоящий городок</h3>
+                <span class="facts-1">— №1 —</span>
                 <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
                 <img class="photo" src="images/index/city.jpg" width="800" height="384" alt="Настоящий городок">
@@ -78,24 +80,28 @@
             <li class="facts-item facts-item-wide">
               <div class="most">
                 <h3 class="facts-item-sedona-item">Там есть мост дьявола</h3>
+                <span class="facts-1">— №2 —</span>
                 <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
               <img class="photo" src="images/index/devils-bridge.jpg" width="800" height="384" alt="Мост дьвола">
             </li>
 
               <li class="facts-item-3">
-                <h3 class="facts-item-sedona">Небольшая площадь</h3>
+                <h3 class="facts-item-sedona-2">Небольшая площадь</h3>
+                <span class="facts-1">— №3 —</span>
                 <p class="advantages-description">Все достопримечательности находятся очень близко</p>
               </li>
               <li class="facts-item-4">
-                <h3 class="facts-item-sedona">Красивая дорога</h3>
+                <h3 class="facts-item-sedona-2">Красивая дорога</h3>
+                <span class="facts-1">— №4 —</span>
                 <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
               </li>
               <li class="facts-item-5">
-                <h3 class="facts-item-sedona">Мало туристов</h3>
+                <h3 class="facts-item-sedona-2">Мало туристов</h3>
+                <span class="facts-1">— №5 —</span>
                 <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
               </li>
-            
+
           </ol>
         </section>
         <section class="search">
@@ -118,10 +124,9 @@
         </section>
     </main>
     <footer class="page-footer">
-
         <section class="footer-social">
           <h2 class="visually-hidden">Социальные сети</h2>
-          <ul class="footer-spcial-list">
+          <ul class="footer-social-list">
             <li class="footer-social-item">
               <a class="button" href="https://vk.com/htmlacademy">
                 <span class="visually-hidden">Вконтакте</span>
