--- a/index.html
+++ b/index.html
@@ -11,18 +11,18 @@
   <div class="container">
     <header class="page-header">
       <nav class="navigation">
-        <a href="index.html">
+        <a class="indexhtml">
           <img class="logo" src="images/index/logo.svg" width="139" height="70" alt="Логотип Седона">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link" href="index.html">Главная</a>
+            <a class="navigation-link-1" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостиницы</a>
+            <a class="navigation-link-3" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -43,7 +43,6 @@
     <main class="main-container main-index">
         <div class="welcome-logo">
           <img class="logo-sedona" src="images/index/welcome.svg" width="458" height="352" alt="welcome SEDONA">
-          <img class="welcome-block-bottom" src="images/index/Vector.svg" width="1200" height="57" alt="vector">
         </div>
         <p class="visually-hidden">WELCOME</p>
         <p class="visually-hidden">to the gorgeous</p>
