--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link-1" href="index.html">Главная</a>
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link-3" href="catalog.html">Гостиницы</a>
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -31,7 +31,11 @@
             <span class="visually-hidden">Поиск</span>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="Избранное"></a>
+            <a class="navigation-link" href="Избранное">
+              <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" viewBox="0 0 19 17" fill="none"></svg>
+              <span class="count-badge">12</span>
+              <span class="visually-hidden">Нравится</span>
+            </a>
             <span class="visually-hidden">Избранное</span>
           </li>
           <li class="navigation-item">
